--- a/src/app/customer/profile/profile.component.html
+++ b/src/app/customer/profile/profile.component.html
@@ -42,12 +42,12 @@
         </div>
         <div style="margin-top: 50px;width: 100%; border: 2px solid #000000;padding: 20px;">
             <div style="text-align: center;">
-                <button type="button" class="btn btn-primary">change Email</button>
+                <button type="button" class="btn btn-primary" (click)="changeEmail()">change Email</button>
             </div>
         </div>
         <div style="margin-top: 50px;width: 100%; border: 2px solid #000000;padding: 20px;">
             <div style="text-align: center;">
-                <button type="button" class="btn btn-primary">change password</button>
+                <button type="button" class="btn btn-primary" (click)="changePassword()">change password</button>
             </div>
         </div>
       </div>
