--- a/src/app/customer/profile/dialog-password.html
+++ b/src/app/customer/profile/dialog-password.html
@@ -3,11 +3,13 @@
         <div class="mb-3">
             
             <br>
-            <label for="exampleFormControlInput1" class="form-label">old password </label>
-            <input type="password" class="form-control"  >
+            <label for="exampleFormControlInput1" class="form-label" >old password </label>
+            <input type="password" class="form-control" [(ngModel)]="obj.oldPassword" >
             <br><br>
             <label for="exampleFormControlInput1" class="form-label">new password</label>
-            <input type="password" class="form-control"  >
-          </div>
+            <input type="password" class="form-control" [(ngModel)]="obj.newPassword" >
+            <br>
+            <button (click)="changePassword()">change</button>
+        </div>
     </div>
 </div>
