--- a/src/app/admin/edit-content/edit-content.component.html
+++ b/src/app/admin/edit-content/edit-content.component.html
@@ -14,6 +14,16 @@
                   </div>
                 </div>
               </div>
+              <hr>
+              <div style="margin-top: 50px;">            
+                <div class="mb-3 row" >
+                  <label for="inputPassword" class="col-sm-2 fs-4 col-form-label">เกณฑ์การจัดส่งฟรี</label>
+                  <div class="col-sm-10">
+                    <input type="text" style="width: 200px; display:inline-block;" class="form-control fs-4" [(ngModel)]="shopPage.shipping">
+                    <button type="button" style="display:inline-block; margin-left: 30px;" class="btn btn-primary" (click)="editShipping()">บันทึก</button>
+                  </div>
+                </div>
+              </div>
               <!-- <div *ngFor="let item of shopPage.img" style="margin-top: 30px;">
                 <img src="{{item}}"alt="" style="width: 200px;height: 200px;">
               </div> -->
