--- a/src/app/navBavcomponents/user-navbar/user-navbar.component.html
+++ b/src/app/navBavcomponents/user-navbar/user-navbar.component.html
@@ -5,7 +5,7 @@
   </button>
   <span>{{nameShop}}</span>
   <span  class="example-spacer"></span>
-  <div style="margin-right: 20px;margin-top: 10px;" class="icon-cart" *ngIf="iconcart">
+  <div style="margin-right: 20px;margin-top: 10px;" class="icon-cart" >
     <mat-icon matBadge="{{CartService.AllQuantity}}" matBadgeColor="warn" (click)="cart()">shopping_cart</mat-icon>
   </div>
   <!-- Include text description of the icon's meaning for screen-readers -->
