--- a/src/app/customer/dialog-show-product/dialog-show-product.component.html
+++ b/src/app/customer/dialog-show-product/dialog-show-product.component.html
@@ -21,6 +21,11 @@
                 </ul>
               </div>
         </div>
+        <div style="margin-top: 20px;">
+          <h3>
+            stock : {{item.number}}
+          </h3>
+        </div>
         <br><br>
         <div style="display:flex;">
             <div style="display:flex;">
