--- a/src/app/admin/edit-content/edit-content.component.html
+++ b/src/app/admin/edit-content/edit-content.component.html
@@ -7,22 +7,33 @@
           <div class="col-6">
             <div style="margin-top: 50px;">            
                 <div class="mb-3 row" >
-                  <label for="inputPassword" class="col-sm-2 fs-4 col-form-label">ชื่อร้าน</label>
-                  <div class="col-sm-10">
+                  <label for="inputPassword" class="col-sm-3 fs-4 col-form-label">ชื่อร้าน</label>
+                  <div class="col-sm-9">
                     <input type="text" style="width: 200px; display:inline-block;" class="form-control fs-4" [(ngModel)]="shopPage.nameShop">
-                    <button type="button" style="display:inline-block; margin-left: 30px;" class="btn btn-primary" (click)="editNameShop()">บันทึก</button>
+                    
                   </div>
                 </div>
               </div>
-              <hr>
+              
               <div style="margin-top: 50px;">            
                 <div class="mb-3 row" >
-                  <label for="inputPassword" class="col-sm-2 fs-4 col-form-label">เกณฑ์การจัดส่งฟรี</label>
-                  <div class="col-sm-10">
-                    <input type="text" style="width: 200px; display:inline-block;" class="form-control fs-4" [(ngModel)]="shopPage.shipping">
-                    <button type="button" style="display:inline-block; margin-left: 30px;" class="btn btn-primary" (click)="editShipping()">บันทึก</button>
+                  <div>
+
+                    <label for="inputPassword" class="col-sm-3 fs-4 col-form-label" >เกณฑ์การจัดส่งฟรี</label>
+                  </div>
+                  <label for="inputPassword" class="col-sm-3 fs-4 col-form-label" >น้อยกว่า</label>
+                  <div class="col-sm-9">
+                    <input type="text" style="width: 200px; display:inline-block;" class="form-control fs-4" [(ngModel)]="shopPage.shipping"> 
+                  </div>
+                  <label for="inputPassword" class="col-sm-3 fs-4 col-form-label" >เก็บค่าจัดส่ง</label>
+                  <div class="col-sm-9">
+                    <input type="text" style="width: 200px; display:inline-block;" class="form-control fs-4" [(ngModel)]="shopPage.cost_shipping"> 
                   </div>
                 </div>
+              </div>
+              <div class="mb-3 row" >
+                <label for="inputPassword" class="col-sm-2 fs-4 col-form-label" ></label>
+                <button type="button" style="display:inline-block; margin-left: 30px;margin-top: 30px;" class="col-sm-3 btn btn-primary" (click)="editNameShop()">บันทึก</button>
               </div>
               <!-- <div *ngFor="let item of shopPage.img" style="margin-top: 30px;">
                 <img src="{{item}}"alt="" style="width: 200px;height: 200px;">
