--- a/src/app/navBavcomponents/user-navbar/user-navbar.component.html
+++ b/src/app/navBavcomponents/user-navbar/user-navbar.component.html
@@ -22,7 +22,7 @@
         <mat-button-toggle style="display: block;" (click)="home()" >สินค้า</mat-button-toggle>
         <mat-button-toggle style="display: block;" (click)="cart()">ตะกร้าสินค้า</mat-button-toggle>
         <mat-button-toggle style="display: block;" (click)="profile()">ข้อมูลผู้ใช้</mat-button-toggle>
-        <mat-button-toggle style="display: block;" >ประวัติการซื้อ</mat-button-toggle>
+        <mat-button-toggle style="display: block;" (click)="order()">ประวัติการซื้อ</mat-button-toggle>
       </mat-button-toggle-group>
   </mat-sidenav>
   <router-outlet></router-outlet>
