--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -4,8 +4,21 @@
     <div class="col-8">
         <div style="margin-top: 50px;">
             <mat-tab-group>
-                <mat-tab label="ยืนยันการชำระเงิน"> 
+                <mat-tab label="ยืนยันการชำระเงิน">
+                  <div class="card" style="margin: 30px 0px;">
+                    <div class="card-body">
+                     <h1>ช่องทางชำระเงิน</h1>
+                     <p>ธนาคาร:  XXXX</p>
+                     <p>เลขบัญชี: xxxx-xxxx-xxxx</p>
+                     <p>ชื่อบัญชี: xxxxxxxx</p>
+                    </div>
+                  </div>
+                    <br><br>
+                    <h1>รายการสั่งซื้อ</h1> 
                     <app-slip></app-slip>
+                    <div style="height: 50px;">
+
+                    </div>
                 </mat-tab>
                 <mat-tab label="รอการตรวจสอบ"> content 2 </mat-tab>
                 <mat-tab label="จัดส่งแล้ว"> content 3 </mat-tab>
