--- a/src/app/customer/slip/slip.component.html
+++ b/src/app/customer/slip/slip.component.html
@@ -1,1 +1,9 @@
-<p>slip works!</p>
+<div>
+    <div *ngFor="let item of order" style="width: 100%;margin-top: 10px;">
+        <div class="card">
+            <div class="card-body">
+              <app-detail-for-slip [idCart]="item.idCart"></app-detail-for-slip>
+            </div>
+          </div>
+    </div>
+</div>
