--- a/src/app/customer/slip/slip.component.html
+++ b/src/app/customer/slip/slip.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let item of order" style="width: 100%;margin-top: 10px;">
         <div class="card">
             <div class="card-body">
-              <app-detail-for-slip [idCart]="item.idCart"></app-detail-for-slip>
+              <app-detail-for-slip [order]="item"></app-detail-for-slip>
             </div>
           </div>
     </div>
