--- a/src/app/customer/detail-for-slip/detail-for-slip.component.html
+++ b/src/app/customer/detail-for-slip/detail-for-slip.component.html
@@ -1,4 +1,3 @@
-<h2>detail-for-slip works!</h2>
 
 <div class="container-fluid">
     <div class="row">
@@ -24,16 +23,32 @@
             <div class="detail" style="margin-top: 10px;display: inline-block;width: 176px;text-align: end;">{{sum}}</div>
             <div class="detail" style="margin-left: 15px;display:inline-block"> บาท </div>
         </div>
+
         <div class="col" style="border-left: 2px solid black;">
-            <div style="padding-left:30px">
-                <div>
-                    <input type="file" #myInputImg class="form-control-file"  (change)="onChangeImg($event)">
-                </div>
-                <br><br>
-                <img *ngIf="previewLoaded" class="img-thumbnail dilog" [src]="slipImg" style="height:150px;" (click)="openDialog()">
-                <br><br>
-                <button type="button" class="btn btn-primary" (click)="submit()">ยืนยันการชำระเงิน</button>
+            <div style="background-color:tomato;width:200px">
+                เลือกที่อยู่จัดส่ง
             </div>
-        </div>    
+        </div>
+        
+        <div class="col" style="border-left: 2px solid black;">
+            <div style="padding-left:30px;background-color: aqua;width: 250px;" >
+                <div *ngIf="order.slipStatus === false">
+                    <div>
+                        <input type="file" #myInputImg class="form-control-file"  (change)="onChangeImg($event)">
+                    </div>
+                    <br><br>
+                    <img *ngIf="previewLoaded" class="img-thumbnail dilog" [src]="slipImg" style="height:150px;" (click)="openDialog()">
+                    <br><br>
+                    <button type="button" class="btn btn-primary" (click)="submit()">ยืนยันการชำระเงิน</button>
+                </div>
+                <div *ngIf="order.slipStatus !== false">
+                    <br><br>
+                    <img class="img-thumbnail dilog" [src]="order.slipVerification" style="height:150px;" (click)="openDialog2()">
+                    <br><br>
+                </div>
+            </div>
+            
+        </div>
+            
     </div>
 </div>
