--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
+    <div class="col-1"></div>
+    <div class="col-10">
         <div style="margin-top: 50px;">
             <mat-tab-group>
                 <mat-tab label="ยืนยันการชำระเงิน">
@@ -20,11 +20,13 @@
 
                     </div>
                 </mat-tab>
-                <mat-tab label="รอการตรวจสอบ"> content 2 </mat-tab>
+                <mat-tab label="รอการตรวจสอบ"> 
+                  <app-wait-to-verify-payment></app-wait-to-verify-payment>  
+                </mat-tab>
                 <mat-tab label="จัดส่งแล้ว"> content 3 </mat-tab>
             </mat-tab-group>
         </div>
     </div>
-    <div class="col-2"></div>
+    <div class="col-1"></div>
   </div>
 </div>
