EvenEmit  refresh component

--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -15,7 +15,7 @@
                   </div>
                     <br><br>
                     <h1>รายการสั่งซื้อ</h1> 
-                    <app-slip></app-slip>
+                    <app-slip (newItemEvent)="addItem()"></app-slip>
                     <div style="height: 50px;">
 
                     </div>
