--- a/src/app/admin/order/order.component.html
+++ b/src/app/admin/order/order.component.html
@@ -1,1 +1,14 @@
-<p>order works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <mat-tab-group>
+                <mat-tab label="ตรวจสอบ">
+                    <app-verify-order></app-verify-order>      
+                </mat-tab>
+                <mat-tab label="จัดส่ง"></mat-tab>
+            </mat-tab-group>
+        </div>
+        <div class="col-1"></div>    
+    </div>
+</div>
