--- a/src/app/login-components/dialog-reset-password.html
+++ b/src/app/login-components/dialog-reset-password.html
@@ -6,8 +6,8 @@
             
             <br>
             <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" [(ngModel)]="email">
+            <button class="btn btn-secondary" (click)="resetPassword()" type="submit"  style="margin-right: 10px;">sumit</button>
           </div>
     </div>
 </div>
