--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -4,7 +4,7 @@
     <div class="col-10">
         <div style="margin-top: 50px;">
             <mat-tab-group>
-                <mat-tab label="ยืนยันการชำระเงิน">
+                <mat-tab label="รอการชำระเงิน">
                   <div class="card" style="margin: 30px 0px;">
                     <div class="card-body">
                      <h1>ช่องทางชำระเงิน</h1>
