--- a/src/app/admin/order/order.component.html
+++ b/src/app/admin/order/order.component.html
@@ -6,7 +6,12 @@
                 <mat-tab label="ตรวจสอบ">
                     <app-verify-order></app-verify-order>      
                 </mat-tab>
-                <mat-tab label="จัดส่ง"></mat-tab>
+                <mat-tab label="เตรียมส่ง">
+                    <app-prepare-order></app-prepare-order>
+                </mat-tab>
+                <mat-tab label="จัดส่งแล้ว">
+                    <app-order-success></app-order-success>
+                </mat-tab>
             </mat-tab-group>
         </div>
         <div class="col-1"></div>    
