--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -24,6 +24,7 @@
                   <app-wait-to-verify-payment></app-wait-to-verify-payment>  
                 </mat-tab>
                 <mat-tab label="จัดส่งแล้ว"> content 3 </mat-tab>
+                <mat-tab label="ไม่ผ่านการตรวจสอบ"> content 3 </mat-tab>
                 <mat-tab label="ยกเลิกแล้ว">
                   <app-cancle-order></app-cancle-order>
                 </mat-tab>
