get disapprove_order

--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -23,8 +23,12 @@
                 <mat-tab label="รอการตรวจสอบ"> 
                   <app-wait-to-verify-payment></app-wait-to-verify-payment>  
                 </mat-tab>
-                <mat-tab label="จัดส่งแล้ว"> content 3 </mat-tab>
-                <mat-tab label="ไม่ผ่านการตรวจสอบ"> content 3 </mat-tab>
+                <mat-tab label="จัดส่งแล้ว"> 
+                  <app-order-approve></app-order-approve>
+                </mat-tab>
+                <mat-tab label="ไม่ผ่านการตรวจสอบ">
+                  <app-order-disapprove></app-order-disapprove>  
+                </mat-tab>
                 <mat-tab label="ยกเลิกแล้ว">
                   <app-cancle-order></app-cancle-order>
                 </mat-tab>
