--- a/src/app/admin/prepare-order/prepare-order.component.html
+++ b/src/app/admin/prepare-order/prepare-order.component.html
@@ -3,7 +3,20 @@
 <div style="margin-top:30px" *ngFor="let item of order">
     <div class="card">
         <div class="card-body">
-         {{ item | json}}
+         <div>
+            {{ item | json}}
+         </div>
+         <br>
+         <div class="row" style="width: 40%;">
+            <label  class="col-sm-2 col-form-label" >id Tracking</label>
+            <div class="col-sm-10" >
+              <input type="text" class="form-control" style="width: 50%;display: inline-block;" #idTracking>
+              <button type="button" style="display: inline-block; margin-left: 8px;" class="btn btn-primary" (click)="saveIdTracking(item,idTracking.value)">ยืนยัน</button>
+            </div>
+         </div>
         </div>
-      </div>
+
+
+
+    </div>
 </div>
