--- a/src/app/admin/add-product/add-product.component.html
+++ b/src/app/admin/add-product/add-product.component.html
@@ -82,10 +82,10 @@
     <!-- start column 3 -->
     <div class="col-3" style="background-color: rgb(255, 255, 255)">
       
-      {{ product.value | json }}
+      <!-- {{ product.value | json }}
       <br><br><br>
       ตัวที่จะส่งจริงๆ
-      {{ techSpec | json}}
+      {{ techSpec | json}} -->
 
     </div>
   </div>
