--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -50,7 +50,8 @@
       </div>
       <div class="col-3" style="background-color: #3F51B5;" ></div>
       <!-- menu select type Product -->
-      <div class="col-2" style="  border-right: 1px solid black;border-collapse: collapse;">
+      
+      <div class="col-2" >
         <mat-button-toggle-group style="display: block;margin-top: 50px;" name="fontStyle" aria-label="Font Style" >
   
           <mat-button-toggle style="display: block;" (click)="FilterAll()" >All</mat-button-toggle>
@@ -72,8 +73,10 @@
             </div>
           </div>
         </div>
-  
+        
       </div>
-     
+
+    
     </div>
+    <app-footer-page></app-footer-page>
   </div>
