--- a/src/app/customer/detail-for-slip/detail-for-slip.component.html
+++ b/src/app/customer/detail-for-slip/detail-for-slip.component.html
@@ -78,6 +78,9 @@
             <button type="button" class="btn btn-primary" style="margin-right: 20px;" (click)="submit()">ยืนยัน</button>
             <button type="button" class="btn btn-danger" (click)="cancleOrder()">ยกเลิก</button>
         </div>
+        <div *ngIf="roleas !== 'admin' && order.slipStatus === true" style="text-align: right;">
+            <button type="button" class="btn btn-danger" (click)="cancleOrder()">ยกเลิก</button>
+        </div>
         <div *ngIf="roleas == 'admin'" style="text-align: right;">
             <button style="margin-right:20px;" type="button" class="btn btn-primary" (click)="approve()">ถูกต้อง</button>
 
