--- a/src/app/side-navadmin/side-navadmin.component.html
+++ b/src/app/side-navadmin/side-navadmin.component.html
@@ -22,7 +22,7 @@
                 </mat-panel-title>
               </mat-expansion-panel-header>
 
-              <div class="menu-sidenav"><a routerLink="editContent">จัดการหน้าเว็บ</a></div> 
+              <div class="menu-sidenav"><a routerLink="editContent">จัดการเว็บ</a></div> 
             </mat-expansion-panel>
 
             <mat-expansion-panel (opened)="panelOpenState = true"
