--- a/src/app/customer/ordercustomer/ordercustomer.component.html
+++ b/src/app/customer/ordercustomer/ordercustomer.component.html
@@ -8,9 +8,9 @@
                   <div class="card" style="margin: 30px 0px;">
                     <div class="card-body">
                      <h1>ช่องทางชำระเงิน</h1>
-                     <p>ธนาคาร:  XXXX</p>
-                     <p>เลขบัญชี: xxxx-xxxx-xxxx</p>
-                     <p>ชื่อบัญชี: xxxxxxxx</p>
+                     <p>ธนาคาร:  {{payment.bankName}}</p>
+                     <p>เลขบัญชี: {{payment.accountBank}}</p>
+                     <p>ชื่อบัญชี: {{payment.owner}}</p>
                     </div>
                   </div>
                     <br><br>
