--- a/src/app/admin/update-product/update-product.component.html
+++ b/src/app/admin/update-product/update-product.component.html
@@ -57,7 +57,7 @@
                   </div>
                   <br><br>
                   <div class="mb-3 row">
-                    <img  class="img-thumbnail" [src]="img" style="height:300px;width:150;">
+                    <img  class="img-thumbnail" [src]="img" style="width:150;">
                   </div>
 
                   <br><br>
