--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -63,9 +63,10 @@
       <div class="col-10" style="padding-left: 120px;background-color: #FFFFFF;">
       
         <div style="margin: 20px;display: inline-block;" *ngFor="let item of filterdata">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 18rem;" *ngIf="item.activeStatus !== false">
             <img src="{{item.img}}" class="card-img-top" alt="..." style="height: 300px;">
             <div class="card-body">
+              <!-- <p>{{item.activeStatus | json}}</p> -->
               <p class="card-text">{{item.spec[0].name}}: {{item.spec[0].value}}</p>
               <p class="card-text">{{item.spec[1].name}}: {{item.spec[1].value}}</p>
               <p class="card-text">ราคา {{item.price}} บาท</p>
