--- a/src/app/customer/footer-page/footer-page.component.html
+++ b/src/app/customer/footer-page/footer-page.component.html
@@ -1,3 +1,30 @@
-<div style="min-height: 150px;background-color:wheat">
-    Footer Page
+<div style="min-height: 300px;background-color:#1c2331;width: 100%;color: aliceblue;">
+   <div class="row">
+        <div class="col-4">
+
+        </div>
+        <div class="col-4">
+            <div style="margin-top:20px">
+                <span class="Article">Foollow</span>
+                <br>
+                <i class="pi pi-facebook" style="color: #FFF;"></i>
+                <span>New York, NY 10012, US</span>
+                <br>
+                <span>info@example.com</span>
+                <br>
+                <span>+ 01 234 567 88</span>
+            </div>
+        </div>
+        <div class="col-4">
+            <div style="margin-top:20px">
+                <span class="Article">Contact</span>
+                <br>
+                <mat-icon>pin_drop</mat-icon><span>New York, NY 10012, US</span>
+                <br>
+                <mat-icon>mail</mat-icon><span>info@example.com</span>
+                <br>
+                <mat-icon>call</mat-icon><span>+ 01 234 567 88</span>
+            </div>
+        </div>
+   </div>
 </div>
