--- a/src/app/admin/order-success/order-success.component.html
+++ b/src/app/admin/order-success/order-success.component.html
@@ -8,7 +8,15 @@
               <label for="">{{item.updateAt | date:'dd-LL-yyyy HH:mm:ss'}}</label>
           </div>
           <div>
+            <br>
+            <label for="">user: {{item.idUser.name}}</label>
+            <br>
+            <br>
             <label for="">ID Tracking:   {{item.idTracking}}</label>
+            <br>
+            <label>   บริษัทขนส่ง: {{item.expressCompany}}</label>
+            <br>
+            
         </div>
         <br>
         <div>รายการสินค้า</div>
