--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -81,6 +81,6 @@
     </div>
     <div style="margin: 0;">
       <i class="pi pi-check"></i>
-      <app-footer-page></app-footer-page>
+      <app-footer-page [Footer]="FooterData" [spec]="specModel"></app-footer-page>
     </div>
   </div>
