--- a/src/app/admin/prepare-order/prepare-order.component.html
+++ b/src/app/admin/prepare-order/prepare-order.component.html
@@ -4,16 +4,39 @@
     <div class="card">
         <div class="card-body">
          <div>
-            {{ item | json}}
+            <!-- {{ item | json}} -->
+            <div class="card">
+               <div class="card-body">
+                 <span>user: {{item.idUser.name}}</span>
+                 <br>
+                 
+               </div>
+             </div>
+             <div class="card">
+               <div class="card-body">
+                  <h5 class="card-title">รายการสินค้า</h5>
+                  <div *ngFor="let product of item.idCart.list">
+                      {{product.idProduct.spec[0].value}}:{{product.quantity}}
+                  </div>
+               </div>
+             </div>
          </div>
          <br>
          <div class="row" style="width: 40%;">
             <label  class="col-sm-2 col-form-label" >id Tracking</label>
             <div class="col-sm-10" >
-              <input type="text" class="form-control" style="width: 50%;display: inline-block;" #idTracking>
-              <button type="button" style="display: inline-block; margin-left: 8px;" class="btn btn-primary" (click)="saveIdTracking(item,idTracking.value)">ยืนยัน</button>
+              <input type="text" class="form-control" style="width: 50%;display: inline-block;" #idTracking [(ngModel)]="Tracking">
+              <!-- <button type="button" style="display: inline-block; margin-left: 8px;" class="btn btn-primary" (click)="saveIdTracking(item,idTracking.value)">ยืนยัน</button> -->
             </div>
          </div>
+         <br>
+         <div class="row" style="width: 40%;">
+          <label  class="col-sm-2 col-form-label" >บริษัทขนส่ง</label>
+          <div class="col-sm-10" >
+            <input type="text" class="form-control" style="width: 50%;display: inline-block;" [(ngModel)]="expressCompany">
+            <button type="button" style="display: inline-block; margin-left: 8px;" class="btn btn-primary"  (click)="saveIdTracking(item)">ยืนยัน</button>
+          </div>
+       </div>
         </div>
 
 
