--- a/src/app/customer/footer-page/footer-page.component.css
+++ b/src/app/customer/footer-page/footer-page.component.css
@@ -5,3 +5,10 @@ label {
 .Article {
     font-size: 25px;
 }
+
+.contact{
+    margin-left: 10px;
+    font-size: 20px;
+    display: inline;
+    /* background-color: rgb(87, 88, 88); */
+}
