--- a/src/app/customer/footer-page/footer-page.component.html
+++ b/src/app/customer/footer-page/footer-page.component.html
@@ -5,25 +5,26 @@
         </div>
         <div class="col-4">
             <div style="margin-top:20px">
-                <span class="Article">Foollow</span>
-                <br>
-                <i class="pi pi-facebook" style="color: #FFF;"></i>
-                <span>New York, NY 10012, US</span>
-                <br>
-                <span>info@example.com</span>
-                <br>
-                <span>+ 01 234 567 88</span>
+                <span class="Article">Product</span>
+                <div>
+                    <!-- {{spec | json}} -->
+                    <div *ngFor="let item of spec" style="margin: 10px;">
+                        {{item.name}}
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-4">
             <div style="margin-top:20px">
                 <span class="Article">Contact</span>
                 <br>
-                <mat-icon>pin_drop</mat-icon><span>New York, NY 10012, US</span>
+                
+                    <mat-icon style="padding: 0px;">pin_drop</mat-icon><div class="contact">{{Footer.address}}</div>
+                
                 <br>
-                <mat-icon>mail</mat-icon><span>info@example.com</span>
+                <mat-icon>mail</mat-icon><div class="contact">{{Footer.mail}}</div>
                 <br>
-                <mat-icon>call</mat-icon><span>+ 01 234 567 88</span>
+                <mat-icon>call</mat-icon><div class="contact">{{Footer.tel}}</div>
             </div>
         </div>
    </div>
