--- a/src/app/customer/profile/profile.component.html
+++ b/src/app/customer/profile/profile.component.html
@@ -3,7 +3,7 @@
       <div class="col">
         
       </div>
-      <div class="col" style="background-color:antiquewhite;">
+      <div class="col" style="background-color:rgb(255, 255, 255);">
         <div style="margin-top: 50px;width: 100%; border: 2px solid #000000;padding: 20px;">
             <!-- <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label fs-5">Email</label>
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="col">
-        {{user | json}}
+        <!-- {{user | json}} -->
       </div>
     </div>
   </div>
